# ruruby

./: .gitignore  .rubocop_todo.yml  Cargo.toml  Dockerfile  LICENSE  README.md  ao_bench.sh  bench copy.md  bench-.md  bench.md  bench.rb  bench.sh  bench_ahash.md  bench_hash.md  bench_master.md  block.sh  build.rs  callgrind.out.18212  callgrind.out.1856  cobertura.xml  code1.rb  code2.rb  cpu.rb  diff.txt  fibo.sh  fibo_perf.sh  lut_update.rb  mandel.ppm  mandel.sh  mandel_perf.sh  massif.out.28813  massif.out.29123  massif.out.29544  massif.out.30030  massif.out.30347  nes.rb  optcarrot.sh  perf.md  perf.rb  ppu.rb  (+11 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docker-image.yml  docker.yml  rust.yml
bench/: bench.md  bench.rb  bench_app.rb  bench_inline0.md  bench_inline1.md  bench_inline3.md
quine/: yamanote.rb
ruruby/: Cargo.toml  build.rs
ruruby-common/: Cargo.toml
ruruby-parse/: Cargo.toml
ruruby-parse/src/: lib.rs  node.rs  parser.rs  token.rs
ruruby-parse/src/parser/: arguments.rs  define.rs  expression.rs  flow_control.rs  lexer.rs  literals.rs
ruruby/src/: alloc.rs  arith.rs  builtin.rs  codegen.rs  compile.rs  coroutine.rs  error.rs  globals.rs  lib.rs  main.rs  parse.rs  repl.rs  tests.rs  util.rs  value.rs  vm.rs
ruruby/src/builtin/: array.rs  basicobject.rs  binding.rs  class.rs  comparable.rs  complex.rs  dir.rs  enumerator.rs  exception.rs  falseclass.rs  fiber.rs  file.rs  float.rs  gc.rs  hash.rs  integer.rs  io.rs  kernel.rs  math.rs  method.rs  module.rs  nilclass.rs  numeric.rs  object.rs  process.rs  procobj.rs  range.rs  regexp.rs  string.rs  structobj.rs  symbol.rs  time.rs  trueclass.rs  unbound_method.rs
ruruby/src/codegen/: defined.rs  send.rs
ruruby/src/compile/: codegen.rs  node.rs  parser.rs  token.rs
ruruby/src/compile/codegen/: defined.rs  send.rs
ruruby/src/compile/parser/: define.rs  expression.rs  flow_control.rs  lexer.rs  literals.rs
ruruby/src/coroutine/: asm_arm64.rs  asm_windows_x64.rs  asm_x64.rs  stack.rs
ruruby/src/globals/: constants.rs  method.rs  method_perf.rs
ruruby/src/parse/: codegen.rs  lexer.rs  node.rs  parser.rs  token.rs  util.rs
ruruby/src/parse/codegen/: send.rs
ruruby/src/parse/parser/: expression.rs
ruruby/src/startup/: startup.rb
ruruby/src/value/: array.rs  class.rs  hash.rs  real.rs  rvalue.rs  string.rs  value.rs
ruruby/src/vm/: args.rs  executor.rs  iseq.rs  perf.rs  vm_inst.rs
ruruby/src/vm/executor/: constants.rs  context.rs  fiber.rs  frame.rs  loader.rs  method.rs  ops.rs  opt_core.rs  repl.rs  ruby_stack.rs  stack_frame.md
ruruby/src/vm/executor/frame/: arg_handler.rs  heap.rs  ruby_stack.rs
ruruby/tests/: autoload_test.rb  fibo_perf.rb  function_test.rs  kernel_test.rb  literals.rs  sample.rb  string.rb
src/: alloc.rs  arith.rs  builtin.rs  class.rs  codegen.rs  coroutine.rs  error.rs  eval.rs  globals.rs  id_table.rs  instance.rs  kernel.rs  lexer.rs  lib.rs  loader.rs  main.rs  node.rs  parse.rs  parser.rs  repl.rs  test.rs  tests.rs  token.rs  util.rs  value.rs  vm.rs
test/: so_mandelbrot.rb
tests/: accessor_get.rb  accessor_set.rb  accessor_test.rb  ao_bench.rb  app_mandel_perf.rb  app_mandelbrot.rb  array_test.rs  autoload_sample.rb  block.rb  builtins.rs  case.rb  classes.rs  collatz.rb  fiber_allocate.rb  fiber_switch.rb  fibo.rb  fibo_perf.rb  for_loop.rb  function_test.rs  ivar_get.rb  ivar_set.rb  kernel_test.rb  kernel_test_win.rb  literals.rs  loop_for.rb  module_test.rs  nbody.rb  simple_call.rb  so_concatenate.rb  so_mandelbrot.rb  string_scan_re.rb  string_scan_str.rb  vm_test.rs
(+130 files in other folders)
