[package]
name = "ruruby"
version = "0.1.0"
authors = ["monochrome <sisshiki@mac.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
perf = []
trace = []
emit-iseq = []
gc-debug = []
verbose = []

[dependencies]
rustyline = "6.2.0"
clap = "2.33.1"
ansi_term = "0.12.1"
regex = "1.3.9"
fancy-regex = "0.3.5"
rand = "0.7.3"
divrem = "0.1.0"
lazy_static = "1.4.0"
fxhash = "0.2.1"
chrono = "0.4.15"
term_size="0.3.2"
console = "0.12.0"
dirs = "3.0.1"