[package]
name = "ruruby"
version = "0.2.0"
authors = ["monochrome <sisshiki@mac.com>"]
edition = "2018"
license-file = "LICENSE"
repository = "https://github.com/sisshiki1969/ruruby"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
perf = []
trace = []
trace-func = []
emit-iseq = []
gc-debug = []
verbose = []

[dependencies]
rustyline = "7.0.0"
clap = "2.33.1"
ansi_term = "0.12.1"
regex = "1.4.2"
fancy-regex = "0.4.1"
rand = "0.8.3"
divrem = "0.1.0"
fxhash = "0.2.1"
chrono = "0.4.15"
term_size="0.3.2"
console = "0.14.0"
dirs = "3.0.1"
smallvec = "1.5.0"
arraystring = "0.3.0"
region = "2.2.0"

[profile.release]
debug = false