[package]
name = "ruruby-parse"
version = "0.4.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxhash = "0.2.1"
once_cell = "1.8.0"
enum-iterator = "0.7.0"
num = "0.4"
num-bigint = "0.4.2"
ruruby-common =  { path = "../ruruby-common" }